고객 요청 수정사항 반영

--- a/index.html
+++ b/index.html
@@ -89,6 +89,90 @@
                     </div>
                 </div>
             </section>
+            <section class="section section3 fp-auto-height-responsive ani">
+                <div class="inner">
+                    <h2>
+                        <div class="title-bar"></div>
+                        <div class="text">
+                            <b>분야별 전담 시스템</b>으로 <br/>
+                            대응하는 주요 업무
+                        </div>
+                    </h2>
+
+                    <div class="slide-wrap">
+                        <!-- <div class="btn-wrap">
+                            <button type="button" class="pn-btn prev-btn">
+                                <img src="./img/main/section3/prev-btn.png" alt="이전" class="icon" />
+                            </button>
+                            <button type="button" class="pn-btn next-btn">
+                                <img src="./img/main/section3/next-btn.png" alt="다음" class="icon" />
+                            </button>
+                        </div> -->
+
+                        <div class="three-box pc">
+                            <div class="item">
+                                <div class="bar"></div>
+                                <div class="subject">기업법무</div>
+                                <div class="content">
+                                    감정이 아닌 기준과 결과로 정리 
+                                </div>
+                                <a href="#" class="more-btn">MORE</a>
+                            </div>
+                            <div class="item">
+                                <div class="bar"></div>
+                                <div class="subject">가상자산</div>
+                                <div class="content">
+                                    감정이 아닌 기준과 결과로 정리 
+                                </div>
+                                <a href="#" class="more-btn">MORE</a>
+                            </div>
+                            <div class="item">
+                                <div class="bar"></div>
+                                <div class="subject">일반송무</div>
+                                <div class="content">
+                                    감정이 아닌 기준과 결과로 정리 
+                                </div>
+                                <a href="#" class="more-btn">MORE</a>
+                            </div>
+                        </div>
+
+                        <div class="swiper mySwiper mo">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="bar"></div>
+                                        <div class="subject">기업법무</div>
+                                        <div class="content">
+                                            감정이 아닌 기준과 결과로 정리 
+                                        </div>
+                                        <a href="#" class="more-btn">MORE</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="bar"></div>
+                                        <div class="subject">가상자산</div>
+                                        <div class="content">
+                                            감정이 아닌 기준과 결과로 정리 
+                                        </div>
+                                        <a href="#" class="more-btn">MORE</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="bar"></div>
+                                        <div class="subject">일반송무</div>
+                                        <div class="content">
+                                            감정이 아닌 기준과 결과로 정리 
+                                        </div>
+                                        <a href="#" class="more-btn">MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="section section2 fp-auto-height-responsive ani">
                 <div class="inner">
                     <div class="left-content">
@@ -109,112 +193,6 @@
                         </div>
                     </div>
                     <img src="./img/main/section2/lawyer.png" alt="오규성 대표 변호사" class="lawyer-img" />
-                </div>
-            </section>
-            <section class="section section3 fp-auto-height-responsive ani">
-                <div class="inner">
-                    <h2>
-                        <div class="title-bar"></div>
-                        <div class="text">
-                            <b>분야별 전담 시스템</b>으로 <br/>
-                            대응하는 주요 업무
-                        </div>
-                    </h2>
-
-                    <div class="slide-wrap">
-                        <div class="btn-wrap">
-                            <button type="button" class="pn-btn prev-btn">
-                                <img src="./img/main/section3/prev-btn.png" alt="이전" class="icon" />
-                            </button>
-                            <button type="button" class="pn-btn next-btn">
-                                <img src="./img/main/section3/next-btn.png" alt="다음" class="icon" />
-                            </button>
-                        </div>
-                        <div class="swiper mySwiper">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">형사</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">부동산</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">이혼 · 상속 </div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">재개발 · 재건축</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">회생 · 파산</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">조세 · 행정</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">가상자산</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="item">
-                                        <div class="bar"></div>
-                                        <div class="subject">자문</div>
-                                        <div class="content">
-                                            감정이 아닌 기준과 결과로 정리 
-                                        </div>
-                                        <a href="#" class="more-btn">MORE</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </section>
             <section class="section section4 fp-auto-height-responsive ani">
@@ -1965,7 +1943,7 @@
             var myFullpage = new fullpage('#fullpage', {
                 navigation: true,
                 anchors: ['main', 'member', 'field', 'case', 'office', 'contact'],
-                navigationTooltips: ['메인', '구성원소개', '업무분야', '업무사례', '사무소안내', '상담신청'],
+                navigationTooltips: ['메인', '업무분야', '구성원소개', '업무사례', '사무소안내', '상담신청'],
                 showActiveTooltip: true,
                 controlArrows: false,
                 responsiveWidth: 950, 
@@ -1990,17 +1968,17 @@
         <div class="floating-menu">
             <ul class="menu-list">
                 <li>
-                    <a href="#">
+                    <a href="tel::1800-6490">
                         <img src="./img/floating/icon1.png" alt="전화" class="icon">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./sub4_1.html" target="_blank">
                         <img src="./img/floating/icon2.png" alt="1:1" class="icon">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://pf.kakao.com/_PxeAxbK" target="_blank">
                         <img src="./img/floating/icon3.png" alt="chat" class="icon">
                     </a>
                 </li>
